--- a/OnlineOrder/build.gradle
+++ b/OnlineOrder/build.gradle
@@ -1,10 +1,10 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.2.1'
-	id 'io.spring.dependency-management' version '1.1.4'
+	id 'org.springframework.boot' version '3.0.11'
+	id 'io.spring.dependency-management' version '1.1.3'
 }
 
-group = 'com.laioffer'
+group = 'com.jeremy'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -16,7 +16,10 @@ repositories {
 }
 
 dependencies {
+	implementation 'com.github.javafaker:javafaker:1.0.2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	runtimeOnly 'org.postgresql:postgresql:42.6.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
