add: repository interface for cart, customer, menuItem, orderIte, and restaurant. Also, devrunner for testing repository operations and db.

--- a/OnlineOrder/src/main/resources/application.yml
+++ b/OnlineOrder/src/main/resources/application.yml
@@ -15,4 +15,6 @@ spring:
 logging:
   level:
     org.apache.coyote.http11.Http11InputBuffer: DEBUG # Incoming HTTP requests
+    org.springframework.jdbc.datasource.init: DEBUG
+    org.springframework.jdbc.core: DEBUG # SQL
 
